--- a/templates/posts/my-interest.html
+++ b/templates/posts/my-interest.html
@@ -19,7 +19,7 @@
 {% if sell_posts %}
     {% for post in sell_posts %}
         <div class="search-result-item">
-          <a href="{% url 'interest-detail' post.slug %}"><h4>{{ post.title }}</h4>
+          <a href="{% url 'post-detail' post.slug %}"><h4>{{ post.title }}</h4>
           <ul class="blog-info">
             <li><i class="fa fa-calendar"></i> {{ post.created_date|date }}</li>
             <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>
@@ -56,7 +56,7 @@
        {% if buy_posts %}
     {% for post in buy_posts %}
         <div class="search-result-item">
-          <a href="{% url 'interest-detail' post.slug %}"><h4>{{ post.title }}</h4>
+          <a href="{% url 'post-detail' post.slug %}"><h4>{{ post.title }}</h4>
           <ul class="blog-info">
             <li><i class="fa fa-calendar"></i> {{ post.created_date|date }}</li>
             <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>
