--- a/templates/posts/job-detail-contact-info.html
+++ b/templates/posts/job-detail-contact-info.html
@@ -36,20 +36,37 @@
                         <li> <strong>Mobile Number:</strong> {% if post.user.user_profiles.mobile_verify == True %} Verified {% else %} Not Verified{% endif %}</li>
                       </ul>
                    <div class="row"> <div class="col-md-6 margin-top-20">
+                {% if request.user == post.user %}
+                    <blockquote>
+                    <ul class="list-unstyled margin-bottom-0">
+                        <li><strong>Email Id:</strong> {{ post.user.email }}</li>
+                        <li> <strong>Mobile Number:</strong>  {% if post.mobile == True %}{{ post.user.user_profiles.mobile }}{% else %}Not Verified{% endif %}  </li>
+                        <li> <strong>Skype ID:</strong> {% if post.skypeid == True %}{{ post.user.user_profiles.skypeid }}{% else %}Not Provided{% endif %} </li>
+                      </ul>
+                    </blockquote>
+                    {% else %}
+                  <blockquote>
+                    {% if contact == 'true' %}
+                  <ul class="list-unstyled margin-bottom-0">
+                        <li><strong>Email Id:</strong> {{ post.user.email }}</li>
+                        <li> <strong>Mobile Number:</strong>  {% if post.mobile == True %}{{ post.user.user_profiles.mobile }}{% else %}Not Verified{% endif %}  </li>
+                        <li> <strong>Skype ID:</strong> {% if post.skypeid == True %}{{ post.user.user_profiles.skypeid }}{% else %}Not Provided{% endif %} </li>
+                      </ul>
+              {% else %}
+                <p> Click here to get contact
 
+                  information of usre
 
-
-<blockquote class="border-left-none">
-{% if ip_tracker.view_count == plan.plan.view_contact %}
+                  (Email ID, Mobile number & Skype ID) </p>
+                {% if tracker.view_count == plan.plan.view_contact %}
                           <a href="" class="btn btn-primary">You Have Reached Your View Limit</a>
                       {% else %}
                     <a href="{% url 'post-contact' post.slug %}" class="btn btn-primary">Get Contact Detail</a>
                       {% endif %}
-</blockquote>
-
-
-
-                    </div>
+              {% endif %}
+                  </blockquote>
+                {% endif %}
+                </div>
 
                     <div class="col-md-6 padding-left-0 margin-top-20">
 
@@ -109,16 +126,37 @@ Contact Request Sent, user will soon contact you
 
            <div class="row front-lists-v1  ">
                     <div class="col-md-6">
-                     <blockquote class="border-left-none">
+              {% if request.user == post.user %}
+                    <blockquote>
+                    <ul class="list-unstyled margin-bottom-0">
+                        <li><strong>Email Id:</strong> {{ post.user.email }}</li>
+                        <li> <strong>Mobile Number:</strong>  {% if post.mobile == True %}{{ post.user.user_profiles.mobile }}{% else %}Not Verified{% endif %}  </li>
+                        <li> <strong>Skype ID:</strong> {% if post.skypeid == True %}{{ post.user.user_profiles.skypeid }}{% else %}Not Provided{% endif %} </li>
+                      </ul>
+                    </blockquote>
+                    {% else %}
+                  <blockquote>
+                    {% if contact == 'true' %}
+                  <ul class="list-unstyled margin-bottom-0">
+                        <li><strong>Email Id:</strong> {{ post.user.email }}</li>
+                        <li> <strong>Mobile Number:</strong>  {% if post.mobile == True %}{{ post.user.user_profiles.mobile }}{% else %}Not Verified{% endif %}  </li>
+                        <li> <strong>Skype ID:</strong> {% if post.skypeid == True %}{{ post.user.user_profiles.skypeid }}{% else %}Not Provided{% endif %} </li>
+                      </ul>
+              {% else %}
+                <p> Click here to get contact
 
-{% if ip_tracker.view_count == plan.plan.view_contact %}
+                  information of usre
+
+                  (Email ID, Mobile number & Skype ID) </p>
+                {% if tracker.view_count == plan.plan.view_contact %}
                           <a href="" class="btn btn-primary">You Have Reached Your View Limit</a>
                       {% else %}
                     <a href="{% url 'post-contact' post.slug %}" class="btn btn-primary">Get Contact Detail</a>
                       {% endif %}
-</blockquote>
-
-                    </div>
+              {% endif %}
+                  </blockquote>
+                {% endif %}
+            </div>
 
                     <div class="col-md-6">
                       <blockquote><p>
