changes text from login to sign in

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,7 +7,7 @@
         <div class="search-result-item border-box">
           <div class="row">
             <div class="col-md-8">
-              <legend>Login<br>
+              <legend>Sign In<br>
               <br>
               </legend>
 <p>Put Message Lorem ipsum dolor site demo content Lorem ipsum dolor site demo content Lorem ipsum dolor site demo content Lorem ipsum dolor site demo content<br>
