js files for tagging

--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -8,7 +8,7 @@
       <div class="content-page">
         <div class="row margin-bottom-30 search-result-item border-box">
           <!-- BEGIN INFO BLOCK -->
-          <h2 class="margin-bottom-30">{{ post.title }}
+          <h2 class="margin-bottom-30"><b>{{ post.title }}</b>
           <span class="pull-right">
           {% if request.GET.redirect == 'true' %}
                     <span class="btn-danger btn-lg" >{% if post.sell_code == True %}on Sell{% else %}on Buy{% endif %}</span>
