--- a/templates/posts/post-detail.html
+++ b/templates/posts/post-detail.html
@@ -6,7 +6,7 @@
       <div class="content-page">
         <div class="row margin-bottom-30 search-result-item border-box">
           <!-- BEGIN INFO BLOCK -->
-          <h2 class="margin-bottom-30">{{ post.title }} <span class="pull-right"><a href="{% url 'my-posting' %}" >
+          <h2 class="margin-bottom-30"><b>{{ post.title }}</b> <span class="pull-right"><a href="{% url 'my-posting' %}" >
               {% if post.sell_code == True %}
               <span class="btn-danger btn-lg" >On Sell</span></a> </span></h2>
                 {% else %}
