--- a/templates/posts/job-detail-get-contact.html
+++ b/templates/posts/job-detail-get-contact.html
@@ -9,7 +9,7 @@
             <div class="content-page">
               <div class="row margin-bottom-30 search-result-item border-box">
                 <!-- BEGIN INFO BLOCK -->
-                <h2 class="margin-bottom-30">{{ post.title }}<span class="pull-right">
+                <h2 class="margin-bottom-30"><b>{{ post.title }}</b><span class="pull-right">
                     {% if post.sell_code == True %}
                     <span class="btn-success btn-lg">On Sell</span>
                     {% else %}
