--- a/templates/posts/my-interest-detail.html
+++ b/templates/posts/my-interest-detail.html
@@ -7,7 +7,7 @@
             <div class="content-page">
               <div class="row margin-bottom-30 search-result-item border-box">
                 <!-- BEGIN INFO BLOCK -->
-                <h2 class="margin-bottom-30">{{ post.title }}<span class="pull-right">
+                <h2 class="margin-bottom-30"><b>{{ post.title }}</b><span class="pull-right">
                     <span class="btn-danger btn-lg" >{% if post.sell_code == True %}on Sell{% else %}on Buy{% endif %}</span>
                     <span class="btn-success btn-lg" >New</span>
                 </span></h2>
