--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                         <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}</li>
                         <li class="pull-right"><i class="fa fa-tag"></i>{{ post.tags.all|join:", " }}</li>
                       </ul>
-                      <p>{{ post.description }}
+                      <p>{{ post.description|truncatewords:30 }}
 
                     </a> </div>
                       {% endfor %}
@@ -138,7 +138,7 @@
                         <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}</li>
                         <li class="pull-right"><i class="fa fa-tag"></i>{{ post.tags.all|join:", " }}</li>
                       </ul>
-                      <p>{{ post.description }}
+                      <p>{{ post.description|truncatewords:30 }}
 
                     </a> </div>
                       {% endfor %}
