--- a/templates/posts/category-posts.html
+++ b/templates/posts/category-posts.html
@@ -54,7 +54,7 @@
                         <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}</li>
                         <li class="pull-right"><i class="fa fa-tag"></i>{{ post.tags.all|join:", " }}</li>
                       </ul>
-                      <p>{{ post.description }}
+                      <p>{{ post.description|truncatewords:30 }}
 
                     </a> </div>
                       {% endfor %}
