--- a/templates/posts/post-your-requarment.html
+++ b/templates/posts/post-your-requarment.html
@@ -28,7 +28,7 @@
                     <div class="col-lg-6">
                       <input type="radio" name="code" value="sell" checked>
                       Want to sell source code  &nbsp;
-                      <input type="radio" name="code" value="buy">
+                      <input type="radio" name="code" value="buy" style="margin-right: -5px">
                       Want to buy source code </div>
                   </div>
                   <div class="form-group">
@@ -58,9 +58,9 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label  class="col-lg-4 control-label">Technology Tags <span class="require">*</span></label>
+                    <label  class="col-lg-4 control-label">Technology Tags <span class="require"></span></label>
                     <div class="col-lg-6">
-                      {{ form.tags }}<span style="color: red"> {{ form.tags.errors.as_text }}</span>
+                      {{ form.tags }}<span style="color: red"></span>
                     </div>
                   </div>
                   <div class="form-group">
