--- a/templates/posts/update-post.html
+++ b/templates/posts/update-post.html
@@ -18,7 +18,7 @@
                     <div class="col-lg-6">
                       <input type="radio" name="code" value="sell" {% if post.sell_code == True %}checked{% endif %}>
                       Want to sell source code  &nbsp;
-                      <input type="radio" name="code" value="buy"{% if post.buy_code == True %}checked{% endif %}>
+                      <input style="margin-right: -5px" type="radio" name="code" value="buy"{% if post.buy_code == True %}checked{% endif %}>
                       Want to buy source code </div>
                   </div>
                   <div class="form-group">
@@ -48,7 +48,7 @@
                     </div>
                   </div>
                   <div class="form-group">
-                    <label  class="col-lg-4 control-label">Technology Tags <span class="require">*</span></label>
+                    <label  class="col-lg-4 control-label">Technology Tags <span class="require"></span></label>
                     <div class="col-lg-6">
                       <input class="form-control" id="id_tags" maxlength="500" name="tags" type="text" value="{{ post.tags.all|join:", " }}"><span style="color: red"> {{ form.tags.errors.as_text }}</span>
                     </div>
