--- a/templates/posts/post-your-requarment.html
+++ b/templates/posts/post-your-requarment.html
@@ -25,10 +25,10 @@
                 <fieldset>
                   <div class="form-group">
                     <label  class="col-lg-4 control-label">Requirement Type <span class="require">*</span></label>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6" style="width: 53%">
                       <input type="radio" name="code" value="sell" checked>
                       Want to sell source code  &nbsp;
-                      <input type="radio" name="code" value="buy" style="margin-right: -5px">
+                      <input type="radio" name="code" value="buy">
                       Want to buy source code </div>
                   </div>
                   <div class="form-group">
