--- a/templates/posts/job-detail-after-login.html
+++ b/templates/posts/job-detail-after-login.html
@@ -110,7 +110,7 @@
             </div>
           </div>
           <div class="row front-lists-v1  ">
-            <div class="col-md-6">
+            <div class="col-md-6" style="float:none">
               {% if request.user == post.user %}
                     <blockquote>
                     <ul class="list-unstyled margin-bottom-0">
