--- a/templates/search.html
+++ b/templates/search.html
@@ -68,7 +68,7 @@
                       <h4>{{ post.title }}</h4>
                       <ul class="blog-info"><li><i class="fa fa-calendar"></i> {{ post.created_date }}</li> <li><i class="fa fa-dollar"></i> {{ post.get_prices_display }}</li>                        <li><i class="fa fa-envelope"></i> Verified </li>
                         <li><i class="fa fa-phone"></i> Verified </li>
-                        <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}jbjjkbkj</li>
+                        <li class="pull-right"><i class="fa fa-list"></i> {{ post.category }}</li>
                         <li class="pull-right"><i class="fa fa-tag"></i>{{ post.tags.all|join:", " }}</li>
                       </ul>
                       <p>{{ post.description }}
