js files for tagging

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                     {% for category in categories %}
                   <li class=""> <a href="{% url 'category-post' category.slug sell %}" >{{ category }}</a></li>
                     {% endfor %}
-                  <li class=""><a href="#" >Other</a></li>
+                  <li class=""><a href="{% url 'category-post' 'other' sell %}" >Other</a></li>
                 </ul>
               </div>
               <div class="row ">
