js files for tagging

--- a/templates/posts/post-your-requarment.html
+++ b/templates/posts/post-your-requarment.html
@@ -153,7 +153,7 @@
 
             // singleFieldTags2 is an INPUT element, rather than a UL as in the other
             // examples, so it automatically defaults to singleField.
-            $('#id_tags').tagit({
+            $('#id_kktags').tagit({
                 availableTags: sampleTags
             });
 
@@ -210,7 +210,7 @@
             //-------------------------------
             // Allow spaces without quotes.
             //-------------------------------
-            $('#allowSpacesTags').tagit({
+            $('#id_tags').tagit({
                 availableTags: sampleTags,
                 allowSpaces: true
             });
